--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,9 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  /*align-items: center;*/
+  justify-content: center;
+  /*min-width: 320px;*/
   min-height: 100vh;
 }
 
