--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  /*align-items: center;*/
-  justify-content: center;
-  /*min-width: 320px;*/
+  min-width: 320px;
   min-height: 100vh;
 }
 
