--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@
   font-weight: 400;
 }
 
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #535bf2;
+}
+
 body {
   margin: 0;
   display: grid;
