Fixed navbar overflowing data, created hotels result page with generation of cards.

--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,10 @@ a:hover {
 
 body {
   margin: 0;
-  display: grid;
-  place-items: center;
   max-width: 1280px;
   min-width: 320px;
   min-height: 100vh;
+  padding-top: 150px;
 }
 
 @media (min-width: 1281px) {
